
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int * ZWVDMCONTROL ;
typedef int * ZWQUERYSYSTEMINFORMATION ;
typedef int * ZWQUERYINFORMATIONPROCESS ;
typedef int * ZWALLOCATEVIRTUALMEMORY ;
typedef int * RTLIMAGENTHEADER ;
typedef int * RTLIMAGEDIRECTORYENTRYTODATA ;
typedef int * HANDLE ;


 int ErrorQuit (char*) ;
 int FreeLibrary (int *) ;
 scalar_t__ GetProcAddress (int *,char*) ;
 int * LoadLibrary (char*) ;
 int * RtlImageDirectoryEntryToData ;
 int * RtlImageNtHeader ;
 int * ZwAllocateVirtualMemory ;
 int * ZwQueryInformationProcess ;
 int * ZwQuerySystemInformation ;
 int * ZwVdmControl ;

void GetFunction()
{
        HANDLE hNtdll;

        hNtdll = LoadLibrary("ntdll.dll");
        if(hNtdll == ((void*)0))
                ErrorQuit("LoadLibrary failed.\n");

        ZwVdmControl = (ZWVDMCONTROL)GetProcAddress(hNtdll, "ZwVdmControl");
        if(ZwVdmControl == ((void*)0))
                ErrorQuit("GetProcAddress failed.\n");

        ZwQueryInformationProcess = (ZWQUERYINFORMATIONPROCESS)GetProcAddress(hNtdll, "ZwQueryInformationProcess");
        if(ZwQueryInformationProcess == ((void*)0))
                ErrorQuit("GetProcAddress failed.\n");

        ZwQuerySystemInformation = (ZWQUERYSYSTEMINFORMATION)GetProcAddress(hNtdll, "ZwQuerySystemInformation");
        if(ZwQuerySystemInformation == ((void*)0))
                ErrorQuit("GetProcessAddress failed.\n");

        ZwAllocateVirtualMemory = (ZWALLOCATEVIRTUALMEMORY)GetProcAddress(hNtdll, "ZwAllocateVirtualMemory");
        if(ZwAllocateVirtualMemory == ((void*)0))
                ErrorQuit("GetProcAddress failed.\n");

        RtlImageNtHeader = (RTLIMAGENTHEADER)GetProcAddress(hNtdll, "RtlImageNtHeader");
        if(RtlImageNtHeader == ((void*)0))
                ErrorQuit("GetProcAddress failed.\n");

        RtlImageDirectoryEntryToData = (RTLIMAGEDIRECTORYENTRYTODATA)GetProcAddress(hNtdll, "RtlImageDirectoryEntryToData");
        if(RtlImageDirectoryEntryToData == ((void*)0))
                ErrorQuit("GetProcAddress failed.\n");

        FreeLibrary(hNtdll);
}
